@@ -1,13 +1,11 @@
-DIST OpenArenaPack.zip 46745 RMD160 7262fdd4b2f98f20294e9826a3d7e7149ea415a1 SHA1 d168bb46a30bfba4104c5e30c66a717be2969618 SHA256 82dd8b3b48782623579ee386a9ee5b6c29a50a1b2a160b60f085aa0ee1b4e69f
-DIST OsirionPack.zip 3706 RMD160 4f5df1c0771cdc299d78c6c0640a8d5c0f17b46e SHA1 cc43b77dd86cf6cc46e3e55f311ea54a96cf52de SHA256 85302e10442df62764ce658c959baaec88b42e105bc0f888015866f99849e97a
-DIST Quake2Pack.zip 10878 RMD160 e977e5366b276e3bec03a0afd48b168087f22441 SHA1 d062291db58c8e7c0560073271c8e63971369aff SHA256 c4a3f2eb4e4ae771897bb018de8aa565532293f24558dbe93a98f16dc3631592
-DIST QuakePack.zip 16447 RMD160 534369eacf4f85f9920d14dc7bdc46b3794e53db SHA1 e161ff09275257a72020a49d85fe8f964393c87e SHA256 a4e838e4bba350de906d5c9db36301ea21979540940c9639fbbefbaec99b0db2
-DIST TremulousPack.zip 17153 RMD160 c51a6be8bf0a0de5fd084984375361f6c1b022ca SHA1 45508c0fa02c417943dd365cfc4dc799bc96ca3a SHA256 25737d258af7d9dd47cbf8942948e8e1322a6404a643c875911d6a39120567ce
-DIST WarsowPack.zip 17855 RMD160 ba49f62486bb67732071e538b0719335bb0625f4 SHA1 5b64e97ed78e5b3e5679710d382bce804214518c SHA256 756a99c76e486ea3f5d2c45addf8afed504a2faf3087cdd210b420af259c2653
-DIST netradiant-1.5.0_p20110127.tar.xz 2066856 RMD160 cf4f28a08a89052882920a9aecc3c25f3426ce5f SHA1 c07f7168700994a88a8fac3c1b8ab9be2f24e75d SHA256 a3607f0beb66b4ff2d7451ad5e9849d0fd85ab0274931bc12c5fbe1c480e3ee7
-DIST netradiant-1.5.0_p20110827.tar.xz 2077748 RMD160 902381b0b1adc5b48ef0e28358528804e5872a21 SHA1 ec149e03b610c6e39cc0df4618e39ede3dca961b SHA256 c3baafa77d42126e475ba5facd1659da28d36e0bf2a86edfb43a06d49e59c338
-EBUILD netradiant-1.5.0_p20110127.ebuild 4118 RMD160 edac22f14eb1bef8d8f4b30e3bd1b89b2f01c628 SHA1 c8b8e11503dbba31ee05fb95ce71df1c2067ea63 SHA256 ae7a16aa98368f597de0693f1b42999afd44491c6c5e29de6d04ce1cb306e54f
-EBUILD netradiant-1.5.0_p20110827.ebuild 4331 RMD160 0e9d4740838c292984ba647d4f70d1353cac9d51 SHA1 1a4b4f7388e39d8449f5bfda64396fb5fc6dfdae SHA256 48a41f0a6fda76bad91582d946abb56aa9d986673c7c50ab2d683395ef5aafcf
-EBUILD netradiant-9999.ebuild 6613 RMD160 662597199bf6796351c7718c6fcca7083e03f0f7 SHA1 3133a6423ce11df7af7d4b06478a39429be16caa SHA256 aeeae9358bde6b22d62ff4e904b1f39902f87b6e41157d4fba3ee0333d32d3ab
-MISC ChangeLog 1020 RMD160 8def36b602f2d0c6bc42c4a304757d5939e8d5bc SHA1 dd5289f78e16c458871cbabb938e826c1c6cf563 SHA256 75c982e293a7682a06912f893b9ba515e13795da53b7911fc8ca44c2ee9fc842
-MISC metadata.xml 1186 RMD160 be062c22d9a05efbffacba53c88f2ed64b3bfc82 SHA1 dcf36e19740d7918e273cb6b4ab284311e0e6308 SHA256 fdd751ec9cc622879d9a46f66f3a90c390177ddf4b421768abdce5e82688db5f
+DIST OpenArenaPack.zip 46745 RMD160 17377fb02917d57695abdc9fb8a71585aad983a4 SHA1 a5ec176158881c06ed9f9672971f99d6d0008a4c SHA256 fd05fe0534a724db58dd326c401696c76c8f17caeafc5b8c1cb10238bce9b8bc
+DIST OsirionPack.zip 3710 RMD160 83ae2c20b570ad305d1f847397331a594d74842f SHA1 ea1b35f067ddda97625b582aefe8143f38a8d27a SHA256 1a999f97c82c471e9ab50e8c766b8599e64b111e3e4089d05872d5b510fa6800
+DIST Quake1Pack.zip 16463 RMD160 661afd19f97eb16e2a5eff7e331551eb302fe034 SHA1 761dcb564923618a931e57349732b649ac3ff4b8 SHA256 d6ddfe7670362751a4c284156342d0acb92a83b09d81df6acfb7936fba53c60a
+DIST Quake2Pack.zip 10878 RMD160 3082ce5419dd357c0c84ae5516bec7a5557dabc0 SHA1 27f029b8354599d678fa3c33117e89dac5e54d7c SHA256 a5abf101b6b0ca7e13c883c7746ed1219dbfbb535c51cf3c9f2ff123e743a4b9
+DIST TremulousPack.zip 17153 RMD160 0942de37f145255fc9db7744e97276e07ea447f8 SHA1 627ba53fa30c0f889a79f366f79bd65c35376f6a SHA256 0af4312d2f9a33e206d1660394c3a4c4a47a26498bb0d6b1c78892628721e4ab
+DIST WarsowPack.zip 17855 RMD160 e10125551cc16ecd75235d28871ef9b6e66dc1c0 SHA1 0521be5a85f587934979123aedc76649e6a1cf6b SHA256 4e2fa7606e0f4a23e2b78fff1affb7444e9e107196c563cac04a0591f5f8c8f0
+DIST netradiant-1.5.0_p20120515.tar.xz 2079592 RMD160 33335cf6c2470ff3dd16177b81ab8dec76ced022 SHA1 e668d8adeeb6e6356c798038d2d130e09d7b10cf SHA256 fc5e4ef7be013ce0acc31958a7a4a4dce61fcf0258232d7d5a912c238cc0d470
+EBUILD netradiant-1.5.0_p20120515.ebuild 4306 RMD160 fb98d28e5da4cedf8b9ba49003cdb2ef648f3461 SHA1 043b92b30ccbabd9f06908063f01f3de693970ab SHA256 18bb99158fba1bb2262e7983e43656be649da1eebaaca875f51a8f983f7e5f13
+EBUILD netradiant-9999.ebuild 6546 RMD160 8567daaad192e97bea38fb56f906a74e521f9417 SHA1 b33bede032f5c815222fe1bb57a295624af5025c SHA256 ecd8d668a6f1ad863439672bb0f4f727c34e17607fec9a294e055fba75b32d06
+MISC ChangeLog 1302 RMD160 b2f11ad0ad19f380185be6909f5721bd7455a57b SHA1 973b38d1ce7346ae97f134d497161415b8a843f2 SHA256 64297d15e08d584d401fff651dea98bbf6badd2fa167bef58b654bfb6936887a
+MISC metadata.xml 1165 RMD160 124f55126cd2809d56a54427d679252683f7caff SHA1 3cf16a07a61c618ea0e710c52953d10df21b8023 SHA256 cff89ddc1af0badf06f84ae463545720fbaec62a52bf288d0cfa5556e204ac57
