@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>no-herd</herd>
 	<maintainer>
 		<email>nikoli@lavabit.com</email>
 		<name>Nikoli</name>
@@ -16,7 +15,7 @@
 		<flag name='nexuiz'>Install Nexuiz pack</flag>
 		<flag name='openarena'>Install OpenArena non GPL pack</flag>
 		<flag name='osirion'>Install Osirion pack</flag>
-		<flag name='quake'>Install Quake non GPL pack</flag>
+		<flag name='quake1'>Install Quake non GPL pack</flag>
 		<flag name='quake2'>Install Quake2 non GPL pack</flag>
 		<flag name='quake2world'>Install Quake2World pack</flag>
 		<flag name='quake3'>Install Quake3 non GPL pack</flag>
